--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
     </dependency>
     <dependency>
       <groupId>com.mysql</groupId>
-      <artifactId>mysql-connector-j</artifactId>
+      <artifactId>mysql-connector-java</artifactId>
       <scope>runtime</scope>
     </dependency>
     <dependency>
