--- a/jenkinsfile
+++ b/jenkinsfile
@@ -42,7 +42,7 @@ pipeline {
                 // Construction du projet avec le profil spécifique à l'environnement
                 script {
                     def profile = params.DEPLOY_ENV.toLowerCase()
-                    sh "mvn clean package -DskipTests=${params.SKIP_TESTS} -P${profile} -Dskip -javaformat skipt=true"
+                    sh "mvn clean package -DskipTests=${params.SKIP_TESTS} -P${profile}"
                 }
                 
                 // Archiver l'artefact dans Jenkins si demandé
