--- a/jenkinsfile
+++ b/jenkinsfile
@@ -75,8 +75,8 @@ pipeline {
                     sh "chmod +x scripts/deploy.sh"
                     
                     // Exécuter le script de déploiement
-                    sh "./scripts/deploy.sh ${params.DEPLOY_ENV} target/${APP_NAME}.war"
-                    
+
+                    sh "./scripts/deploy.sh ${params.DEPLOY_ENV} target/spring-${APP_NAME}*.war"
                     // Archiver l'artefact avec version dans un répertoire centralisé
                     def version = sh(script: "grep -m 1 '<version>' pom.xml | sed -E 's/.*<version>(.*)<\\/version>.*/\\1/'", returnStdout: true).trim()
                     def deployEnv = params.DEPLOY_ENV.toLowerCase()
