--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,16 +37,31 @@ pipeline {
             }
         }
         
-        stage('Build') {
-            steps {
+        //stage('Build') {
+            //steps {
                 // Construction du projet avec le profil spécifique à l'environnement
-                script {
-                    def profile = params.DEPLOY_ENV.toLowerCase()
-                    sh "mvn clean package -DskipTests=${params.SKIP_TESTS} -P${profile}"
-                    sh "mvn spring-javaformat:apply"
-                }
+              //  script {
+                  //  def profile = params.DEPLOY_ENV.toLowerCase()
+                  //  sh "mvn clean package -DskipTests=${params.SKIP_TESTS} -P${profile}"
+                //    sh "mvn spring-javaformat:apply"
+            //    }
                 
                 // Archiver l'artefact dans Jenkins si demandé
+               // script {
+                   // if (params.ARCHIVE_ARTIFACT) {
+                      //  archiveArtifacts artifacts: 'target/*.war', fingerprint: true
+                 //   }
+                //}
+           // }
+       // }
+        stage('Build') {
+            steps {
+                script {
+                    def profile = params.DEPLOY_ENV.toLowerCase()
+                    sh "mvn spring-javaformat:apply"
+                    sh "mvn clean package -DskipTests=${params.SKIP_TESTS} -P${profile}"
+                }
+ 
                 script {
                     if (params.ARCHIVE_ARTIFACT) {
                         archiveArtifacts artifacts: 'target/*.war', fingerprint: true
